--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "lars/underconstruction-password-protection",
+    "name": "lars/underconstruction",
     "license": "MIT",
     "authors": [
         {
@@ -7,18 +7,17 @@
             "email": "larsjanssen64@gmail.com"
         }
     ],
-
     "require": {
         "php" : "^7.0",
         "illuminate/support": "~5.5.0"
     },
-
     "autoload": {
         "psr-4": {
             "LarsJanssen\\underconstruction\\": "src/"
         }
     },
-
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "extra": {
         "laravel": {
             "providers": [
