--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "lars/underconstruction",
+    "name": "larsjanssen/underconstruction",
     "license": "MIT",
     "authors": [
         {
