--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
-    "es6-promise": "^4.1.1"
+    "es6-promise": "^4.1.1",
+    "vue-sweetalert2": "^1.0.7"
   }
 }
