--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     ],
     "require": {
         "php" : "^7.0",
-        "illuminate/support": "~5.5.0",
-        "laracasts/utilities": "^3.0"
+        "illuminate/support": "~5.5.0"
     },
     "autoload": {
         "psr-4": {
