--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php" : "^7.0",
-        "illuminate/support": "~5.5.0"
+        "illuminate/support": "~5.5.0",
+        "mockery/mockery": "^1.0@dev"
     },
     "require-dev": {
         "orchestra/testbench": "~3.5.0",
