--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     },
     "require-dev": {
         "orchestra/testbench": "~3.5.0",
-        "phpunit/phpunit": "^6.4"
+        "phpunit/phpunit": "^6.4",
+        "mockery/mockery": "^1.0@dev"
     },
     "autoload-dev": {
         "psr-4": {
