--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php" : "^7.0",
+        "php": ">=7.1.3",
         "illuminate/support": "~5.6.0"
     },
     "require-dev": {
