--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     ],
     "require": {
         "php" : "^7.0",
-        "illuminate/support": "~5.5.0"
+        "illuminate/support": "~5.5.0|~5.5.5|~5.6.0"
     },
     "require-dev": {
-        "orchestra/testbench": "~3.5.0",
-        "phpunit/phpunit": "^6.4",
+        "orchestra/testbench": "~3.5.3|~3.6.0",
+        "phpunit/phpunit": "^6.3|^7.0",
         "mockery/mockery": "^1.0@dev"
     },
     "autoload-dev": {
