--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "require-dev": {
         "orchestra/testbench": "~3.5.3|~3.6.0",
         "phpunit/phpunit": "^6.3|^7.0",
-        "mockery/mockery": "^1.0@dev"
+        "mockery/mockery": "^1.0@dev",
+        "symfony/thanks": "^1.0"
     },
     "autoload-dev": {
         "psr-4": {
