--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
     ],
     "require": {
         "php" : "^7.0",
-        "illuminate/support": "~5.5.0|~5.5.5|~5.6.0"
+        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "~3.5.3|~3.6.0",
+        "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0",
         "phpunit/phpunit": "^6.3|^7.0",
         "mockery/mockery": "^1.0@dev",
         "symfony/thanks": "^1.0"
