--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
         }
     ],
     "require": {
-        "php" : "^7.0",
-        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0"
+        "php" : "^7.1.3",
+        "illuminate/support": "~5.8.0|^6.0"
     },
     "require-dev": {
-        "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0",
-        "phpunit/phpunit": "^6.3|^7.0",
-        "mockery/mockery": "^1.0@dev",
+        "orchestra/testbench": "~3.8.0|^4.0",
+        "phpunit/phpunit": "^7.5|^8.0",
+        "mockery/mockery": "^1.0",
         "symfony/thanks": "^1.0"
     },
     "autoload-dev": {
