--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
         }
     ],
     "require": {
-        "php" : "^7.1.3",
-        "illuminate/support": "~5.8.0|^6.0|^7.0"
+        "php": "^7.4",
+        "illuminate/support": "^6.18|^7.0|^8.0"
     },
     "require-dev": {
         "orchestra/testbench": "~3.8.0|^4.0",
-        "phpunit/phpunit": "^7.5|^8.0|^9.0",
-        "mockery/mockery": "^1.0",
+        "phpunit/phpunit": "^9.0",
+        "mockery/mockery": "^1.3",
         "symfony/thanks": "^1.0"
     },
     "autoload-dev": {
