--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "illuminate/support": "^6.18|^7.0|^8.0|^9.0"
+        "illuminate/support": "^6.18|^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "~3.8.0|^4.0|^7.0",
+        "orchestra/testbench": "~3.8.0|^4.0|^7.0|^8.0",
         "phpunit/phpunit": "^9.0",
         "mockery/mockery": "^1.3",
         "symfony/thanks": "^1.0"
