--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^7.4|^8.0|^8.1",
         "illuminate/support": "^6.18|^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
